Fixed horizontal scroll on Me page

--- a/app/src/styles/base/_setup.scss
+++ b/app/src/styles/base/_setup.scss
@@ -47,3 +47,7 @@ html.is-animating .transition-fade {
   transform: translate3d(0, 50px, 0);
   opacity: 0;
 }
+
+.main-content {
+  overflow: hidden;
+}
